[package]
name = "image_viewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[dependencies]
ddsfile = "0.5.1"
egui = "0.22.0"
egui_glow = { version="0.22.0", features=["winit"] }
gilrs = "0.10.2"
glow = "0.12.2"
glutin = "0.30.8"
glutin-winit = "0.3.0"
half = "2.3.1"
image = "0.24.6"
jxl-oxide = "0.2.0"
native-dialog = "0.6.4"
raw-window-handle = "0.5.2"
rayon = "1.7.0"
resvg = "0.34.1"
squish = "1.0.0"
vtf = "0.1.5"
webbrowser = "0.8.11"
webp-animation = "0.7.0"
winapi = "0.3.9"
winit = "0.28.6"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
