[package]
name = "image_viewer"
version = "0.3.0"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[dependencies]
ddsfile = "0.5.1"
egui = "0.23.0"
egui_glow = { version="0.23.0", features=["winit"] }
gilrs = "0.10.2"
glow = "0.12.3"
glutin = "0.30.10"
glutin-winit = "0.3.0"
half = "2.3.1"
image = "0.24.7"
jxl-oxide = "0.4.0"
native-dialog = "0.6.4"
raw-window-handle = "0.5.0"
rayon = "1.8.0"
resvg = "0.36.0"
squish = "1.0.0"
vtf = "0.1.5"
webbrowser = "0.8.12"
webp-animation = "0.9.0"
winapi = "0.3.9"
winit = "0.28.7"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"

[features]
release_console = []
